--- a/README.qmd
+++ b/README.qmd
@@ -41,10 +41,10 @@ In a skiagd pipeline, there are three main steps to draw an image:
 2. **Compose shapes** by piping calls to `add_*()` functions. Each `add_*()` call takes the current picture, adds shapes to it, and returns a new picture. The picture object always remains a recipe of drawing commands, no pixels are produced at this stage.
 3. **Render the picture**. To convert a picture into pixels you can call...
    1. `draw_img()` to draw to the current graphics device
-   2. `as_nativeraster()` to obtain a nativeRaster for plotting in base R
+   2. `as_nativeraster()` to obtain a nativeRaster
    3. `as_png()` to obtain a PNG as a raw vector
 
-Despite its name, skiagd presents itself as a toy wrapper and does not behave like an R graphics device. The package is meant to draw images independently of R's graphics device system.
+Despite its name, skiagd presents itself as a toy R wrapper for rust-skia and does not behave like a graphics device. The package is meant to draw images independently of R's graphics device system.
 
 ### Paiting Attributes
 
