docs: polish README

--- a/README.qmd
+++ b/README.qmd
@@ -55,6 +55,7 @@ The following example illustrates a basic drawing pipeline.
 
 ```{r}
 #| label: example-rose-curve
+#| fig-alt: "A white rose curve drawn with skiagd, in violetred background"
 library(skiagd)
 
 rad <- function(deg) deg * (pi / 180)
@@ -139,7 +140,7 @@ imgs <- purrr::imap_chr(seq(0, 4 * pi, length.out = n_frames + 1)[-1], function(
 })
 ```
 
-The animation consists of multiple rotating circles whose radii and phases change over time. You don't need to understand the details of the trigonometry here, the key takeaway is that you can compute complex coordinates in R, pipe them into `add_circle()` and `add_line()`, and then assemble the frames into a GIF using [gifski](https://github.com/r-rust/gifski).
+The animation consists of multiple rotating circles whose radii and phases change over time. You don't need to understand the details of the trigonometry here, the key takeaway is that you can compute complex coordinates in R, pipe them into `add_circle()`, and then assemble the frames into a GIF using [gifski](https://github.com/r-rust/gifski).
 
 ```r
 # Combine frames into a GIF (30 fps)
@@ -158,6 +159,7 @@ The frames in the GIF look like this:
 #| label: example-mystery-curves
 #| fig-height: 12
 #| fig-width: 5
+#| fig-alt: "Frames of the mystery-circles GIF animation. Each frame consists of colorful circles that rotating over time in black background."
 #| echo: false
 library(ggplot2)
 showcase <-
