chore: update skia-safe to '=0.91.1' (#13)
* docs: polish README

* chore: update skia-safe to '=v0.91.1'

* prefer titlecase

--- a/README.qmd
+++ b/README.qmd
@@ -15,7 +15,7 @@ knitr:
 <!-- README.md is generated from README.Rmd. Please edit that file -->
 
 <!-- badges: start -->
-[![rust-skia-version](https://img.shields.io/badge/skia--bindings-v0.88.0-orange)](https://github.com/rust-skia/rust-skia/releases/tag/0.88.0)
+[![rust-skia-version](https://img.shields.io/badge/skia--bindings-v0.91.1-orange)](https://github.com/rust-skia/rust-skia/releases/tag/0.91.1)
 [![R-CMD-check](https://github.com/paithiov909/skiagd/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/paithiov909/skiagd/actions/workflows/R-CMD-check.yaml)
 <!-- badges: end -->
 
@@ -46,9 +46,9 @@ In a skiagd pipeline, there are three main steps to draw an image:
 
 Despite its name, skiagd presents itself as a toy R wrapper for rust-skia and does not behave like a graphics device. The package is meant to draw images independently of R's graphics device system.
 
-### Paiting Attributes
+### Painting Attributes
 
-Skia exposes a rich set of [painting attributes](https://rust-skia.github.io/doc/skia_safe/type.Paint.html) that control how shapes appear when drawn. In skiagd, you can specify these attributes via the `paint()` function and pass the resulting object to the `props` argument of `add_*()`.
+Skia exposes a rich set of [painting attributes](https://paithiov909.r-universe.dev/skiagd/doc/manual.html#paint) that control how shapes appear when drawn. In skiagd, you can specify these attributes via the `paint()` function and pass the resulting object to the `props` argument of `add_*()`.
 Unspecified attributes inherit defaults, many of which follow the current graphics device's settings.
 
 The following example illustrates a basic drawing pipeline.
@@ -58,7 +58,7 @@ The following example illustrates a basic drawing pipeline.
 #| fig-alt: "A white rose curve drawn with skiagd, in violetred background"
 library(skiagd)
 
-rad <- function(deg) deg * (pi / 180)
+rad <- \(deg) deg * (pi / 180)
 
 # Canvas size in pixels (from the current graphics device)
 cv_size <- dev_size()
@@ -87,7 +87,7 @@ canvas("violetred") |>
   draw_img()
 ```
 
-Here we first generate coordinates for a simple rose curve and then draw it with a single call to `add_point()`. We supply the points as a matrix and specify painting attributes via `paint()`. Here we set the colour to `"white"`, the line width to `3` pixels and use `PointMode$Polygon` to connect successive points. And finally, we call `draw_img()` to render the picture on the current device.
+Here we first generate coordinates for a simple rose curve and then draw it with a single call to `add_point()`. We supply the points as a matrix and specify painting attributes via `paint()`. Here we set the colour to `"white"`, the line width to `3` pixels and use `PointMode$Polygon` to connect successive points. And finally, we call `draw_img()` to render the picture on the current graphics device.
 
 ### Showcase
 
@@ -105,12 +105,12 @@ n_circles <- 50
 radius <- runif(n_circles, min = .25, max = 2) |> sort()
 trans <- matrix(c(60, 0, cv_size[1] / 2, 0, 60, cv_size[2] / 2, 0, 0, 1), ncol = 3)
 
-circle <- function(amp, freq, phase) {
+circle <- \(amp, freq, phase) {
   amp * 1i^(freq * seq(0, 600, length.out = n_circles) + phase)
 }
 
 dir <- tempdir()
-imgs <- purrr::imap_chr(seq(0, 4 * pi, length.out = n_frames + 1)[-1], function(a, i) {
+imgs <- purrr::imap_chr(seq(0, 4 * pi, length.out = n_frames + 1)[-1], \(a, i) {
   # Compute a stack of circles with changing amplitudes and phases
   l <- sin(pi * (2 * a - .5)) + 1
   z <- circle(pi / 6, -pi, 0) +
@@ -156,9 +156,9 @@ gifski::gifski(
 The frames in the GIF look like this:
 
 ```{r}
-#| label: example-mystery-curves
+#| label: example-mystery-circles
 #| fig-height: 12
-#| fig-width: 5
+#| fig-width: 8
 #| fig-alt: "Frames of the mystery-circles GIF animation. Each frame consists of colorful circles that rotating over time in black background."
 #| echo: false
 library(ggplot2)
@@ -173,6 +173,11 @@ showcase <-
 
 print(showcase)
 ```
+
+## Further Readings
+
+* [Rediscover Fragment Shaders in R, with skiagd](https://paithiov909.github.io/shiryo/rediscover-shaders-in-r/)
+* [R言語でのアート制作・Rtistryを考える (Japanese)](https://zenn.dev/paithiov909/articles/skiagd-rtistry)
 
 ## License
 
